# autoinspect_jackal_companion_ws

./: ReadMe.md
src/autoinspect_jackal/: ReadMe.md
src/autoinspect_jackal/autoinspect_jackal_bringup/: CMakeLists.txt  ReadMe.md  package.xml
src/autoinspect_jackal/autoinspect_jackal_bringup/config/localization/icp/: localization.yaml  localization_hesai.yaml
src/autoinspect_jackal/autoinspect_jackal_bringup/config/localization/vilens_loco/: icp_config_loco.yaml  vilens_loco.yaml
src/autoinspect_jackal/autoinspect_jackal_bringup/config/odometry/: icp_registration_config_hesai.yaml  vilens-imu.yaml  vilens.yaml
src/autoinspect_jackal/autoinspect_jackal_bringup/config/procman/: jackal.pmd
src/autoinspect_jackal/autoinspect_jackal_bringup/config/slam/: icp_config_slam.yaml  vilens_slam.yaml
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/: localization.launch  mapping.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/localization/: amcl.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/navigation/: laserscan.launch  move_base.launch  navigation.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/odometry/: tf_bridge_odom_vilens_odom_icp.launch  vilens.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/sensors/: hesai.launch  microstrain.launch  realsense.launch  sensors.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/simulation/: jackal_or_reactor_room.launch  jackal_sim.launch  spawn_jackal.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/slam/: slam.launch  tf_bridge_odom_vilens_map.launch  vilens_rviz.launch  vilens_slam.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/launch/visualization/: view_robot.launch
src/autoinspect_jackal/autoinspect_jackal_bringup/maps/: or_reactor_room.yaml  or_reactor_room_topo.yaml
src/autoinspect_jackal/autoinspect_jackal_bringup/rviz/: jackal.rviz  navigation.rviz  navigation_vilens.rviz  vilens_slam.rviz
src/autoinspect_jackal/autoinspect_jackal_description/: CMakeLists.txt  ReadMe.md  package.xml
src/autoinspect_jackal/autoinspect_jackal_description/launch/: description.launch  view_model.launch
src/autoinspect_jackal/autoinspect_jackal_description/rviz/: model.rviz
src/autoinspect_jackal/autoinspect_jackal_description/urdf/: autoinspect_jackal.urdf.xacro  baseplate.urdf.xacro  extras.urdf.xacro
src/autoinspect_jackal/autoinspect_jackal_description/urdf/meshes/: baseplate.stl  plate.stl
(+5 files in other folders)
