<?xml version="1.0"?>
<package format="2">
  <name>autoinspect_jackal_description</name>
  <version>1.0.0</version>
  <description>Robot description for the AutoInspect Clearpath Jackal</description>

  <maintainer email="tobit@robots.ox.ac.uk">Tobit Flatscher</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hesai_description</exec_depend>
  <exec_depend>jackal_description</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>microstrain_inertial_description</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>

